Add mais HTML/CSS/BOOTSTRAP

--- a/codeblog/src/main/resources/templates/posts.html
+++ b/codeblog/src/main/resources/templates/posts.html
@@ -26,7 +26,15 @@
 
             <div class="card shadow-am bg-white rounded" style="margin-top: 20px;">
                 <div class="card-body">
-                    TESTE
+
+                    <p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">
+
+                    </p>
+
+                    <a><h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;"></h4></a>
+
+                    <p class="card-text"></p>
+
                 </div>
             </div>
 
