--- a/codeblog/src/main/resources/templates/posts.html
+++ b/codeblog/src/main/resources/templates/posts.html
@@ -1,8 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:th="https://thymeleaf.org">
 <head>
     <title>MyCodeBlog</title>
     <!--  CSS  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 
 <body>
@@ -24,16 +26,23 @@
                 </ol>
             </nav>
 
-            <div class="card shadow-am bg-white rounded" style="margin-top: 20px;">
+            <div class="card shadow-am bg-white rounded" style="margin-top: 20px;" th:each="post: ${posts}">
                 <div class="card-body">
 
                     <p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">
-
+                        <span th:text="${post.autor}"></span>
+                        <span th:text="${post.data}"></span>
                     </p>
 
-                    <a><h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;"></h4></a>
+                    <a href="#">
+                        <h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;">
+                            <span th:text=${post.titulo}}""></span>
+                        </h4>
+                    </a>
 
-                    <p class="card-text"></p>
+                    <p class="card-text">
+                        <span th:utext="${#strings.abbreviate(post.texto, 400)}"></span>
+                    </p>
 
                 </div>
             </div>
