--- a/codeblog/src/main/resources/templates/posts.html
+++ b/codeblog/src/main/resources/templates/posts.html
@@ -36,7 +36,7 @@
 
                     <a href="#">
                         <h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;">
-                            <span th:text=${post.titulo}}""></span>
+                            <span th:text="${post.titulo}"></span>
                         </h4>
                     </a>
 
