--- a/codeblog/src/main/resources/templates/postForm.html
+++ b/codeblog/src/main/resources/templates/postForm.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="https://thymeleaf.org">
+<html xmlns:th="http://thymeleaf.org">
 <head>
     <title>MyCodeBlog</title>
-    <!--  CSS  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-</head>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!--<link rel="stylesheet" href="style/styleCss.css"/>-->
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote-bs4.js"></script>
+</head>
 <body>
 
 <header>
     <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1" style="font-weight: bold">MyCodeBlog</span>
-        </div>
+        <span class="navbar-brand mb-0 h1" style="font-weight: bold;">MyCodeBlog</span>
     </nav>
 </header>
 
 <section>
-    <div class="container" style="width: 60%; padding-bottom: 30px;">
-
+    <div class="container"  style="width: 70%;">
         <nav aria-label="breadcrumb">
-            <ol class="breadcrumb" style="background-color: white; padding-left: 0px;margin-top: 20px;">
-                <li class="breadcrumb-item" aria-current="page"><a href="/posts">Posts</a></li>
+            <ol class="breadcrumb" style="background-color: white; padding-left: 0px;">
+                <li class="breadcrumb-item"><a href="/posts">Posts</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Novo Post</li>
             </ol>
         </nav>
-
         <div>
             <th:block th:include="mensagemValidacao"></th:block>
-
             <form method="post">
                 <div class="form-group">
                     <input type="text" class="form-control" name="titulo" placeholder="Título *">
                 </div>
-
                 <div class="form-group">
                     <input type="text" class="form-control" name="autor" placeholder="Autor *">
                 </div>
@@ -48,9 +49,17 @@
                 <!--<button type="submit" class="btn" style="margin-top: 10px;">Cancelar</button>-->
             </form>
         </div>
-
     </div>
 </section>
+
+<!--SCRIPT SUMMERNOTE-->
+<script>
+    $('#summernote').summernote({
+        placeholder: 'Texto *',
+        tabsize: 2,
+        height: 300
+    });
+</script>
 
 </body>
 </html>
